# Gestenerkennung

Komprimierungs Tool/: CMakeLists.txt  CMakeSettings.json  CppProperties.json  link.txt  pc2.sln  pc2.vcxproj  pc2.vcxproj.filters  pfh_shape_reco.cpp  pfh_shape_reco.hpp
PCD_Combinder/: PCD_Combinder.sln
PCD_Combinder/PCD_Combinder/: Form1.Designer.cs  Form1.cs  Form1.resx  PCD_Combinder.csproj  Program.cs
depthVideoCS/: depthVideoCS.sln
depthVideoCS/DSBridge/: AssemblyInfo.cpp  DSBridge.cpp  DSBridge.h  DSBridge.vcxproj  DSBridge.vcxproj.filters  ReadMe.txt  stdafx.h
depthVideoCS/depthVideoCS/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  depthVideoCS.csproj  depthVideoCS_TemporaryKey.pfx
python/: model.ckpt.data-00000-of-00001  model.ckpt.index  read_data.py  read_test.py  recog.bat  rnn_lstm_testing.py  rnn_lstm_train.py  test_data.npy  train.bat
python/data/: lcc_p1_k0_g0.txt  lcc_p1_k0_g1.txt  lcc_p1_k0_g10.txt  lcc_p1_k0_g11.txt  lcc_p1_k0_g12.txt  lcc_p1_k0_g13.txt  lcc_p1_k0_g14.txt  lcc_p1_k0_g15.txt  lcc_p1_k0_g16.txt  lcc_p1_k0_g17.txt  lcc_p1_k0_g18.txt  lcc_p1_k0_g19.txt  lcc_p1_k0_g2.txt  lcc_p1_k0_g20.txt  lcc_p1_k0_g21.txt  lcc_p1_k0_g22.txt  lcc_p1_k0_g23.txt  lcc_p1_k0_g24.txt  lcc_p1_k0_g25.txt  lcc_p1_k0_g26.txt  lcc_p1_k0_g27.txt  lcc_p1_k0_g28.txt  lcc_p1_k0_g29.txt  lcc_p1_k0_g3.txt  lcc_p1_k0_g30.txt  lcc_p1_k0_g31.txt  lcc_p1_k0_g32.txt  lcc_p1_k0_g33.txt  lcc_p1_k0_g34.txt  lcc_p1_k0_g35.txt  lcc_p1_k0_g36.txt  lcc_p1_k0_g37.txt  lcc_p1_k0_g38.txt  lcc_p1_k0_g39.txt  lcc_p1_k0_g4.txt  lcc_p1_k0_g40.txt  lcc_p1_k0_g41.txt  (+362 more)
(+40 files in other folders)
